Fix the overflow caused by AOS.

--- a/css/app.sass
+++ b/css/app.sass
@@ -255,6 +255,9 @@ $header_menu_bottom_height: 88px
     font-size: 32px
 
 
+.section-md, .section-lg, .section-kv
+  overflow-x: hidden
+
 .section-md
   padding-top: 40px
   padding-bottom: 40px
